--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-nvd3": "0.1.1",
     "ember-cli-qunit": "^2.0.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-d3": "0.2.0",
     "ember-data": "^2.7.0-beta.1",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
+    "ember-nvd3-shim": "0.1.5",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.1"
   }
