--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,9 @@
     "ember-qunit-notifications": "0.1.0",
     "tabletop": "^1.4.3",
     "d3": "^3.5.17",
-    "nvd3": "~1.8.3"
+    "nvd3": "~1.8.3",
+    "bootstrap": "~3.3.5",
+    "animate.css": "^3.5.2",
+    "font-awesome": "~4.5.0"
   }
 }
