--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "^2.0.1",
+    "ember-bootstrap": "0.8.0",
     "ember-cli": "2.7.0-beta.5",
     "ember-cli-accounting": "1.0.1",
     "ember-cli-app-version": "^1.0.0",
@@ -37,6 +38,7 @@
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.7.0-beta.1",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "2.1.1",
     "ember-highcharts": "0.4.4",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
