--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-font-awesome": "2.1.1",
     "ember-highcharts": "0.4.4",
     "ember-load-initializers": "^0.5.1",
+    "ember-power-select": "1.0.0-beta.4",
     "ember-resolver": "^2.0.3",
     "highcharts": "4.2.5",
     "loader.js": "^4.0.1"
