--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "nvd3": "~1.8.3",
     "bootstrap": "~3.3.5",
     "animate.css": "^3.5.2",
-    "font-awesome": "~4.5.0"
+    "font-awesome": "~4.5.0",
+    "leaflet": "~0.7.7"
   }
 }
