--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "2.1.1",
     "ember-highcharts": "0.4.4",
+    "ember-leaflet": "2.2.7",
     "ember-light-table": "1.1.0",
     "ember-load-initializers": "^0.5.1",
     "ember-power-select": "1.0.0-beta.4",
