--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-power-select": "1.0.0-beta.4",
     "ember-resolver": "^2.0.3",
+    "ember-share": "0.1.1",
     "highcharts": "4.2.5",
     "loader.js": "^4.0.1"
   }
