--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "^2.0.1",
+    "ember-autoserve": "0.0.4",
     "ember-bootstrap": "0.8.0",
     "ember-cli": "2.7.0-beta.5",
     "ember-cli-accounting": "1.0.1",
